fix: change backgournd color to have more contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,5 +4,5 @@
   border-radius: 50%;
 }
 body{
-  background-color: #fa61de;
+  background-color: #f1a7e4;
 }
